refactor: use StandardCharsets